XNFR-557 ALIGNMENT ISSUES

--- a/src/app/util/email-templates/email-templates-list-and-grid-view/email-templates-list-and-grid-view.component.css
+++ b/src/app/util/email-templates/email-templates-list-and-grid-view/email-templates-list-and-grid-view.component.css
@@ -170,7 +170,7 @@ td h6 {
   border: 1px solid #e0e0e0;
 }
 .cardHeight {
-  height: 560px !important;
+  height: 603px !important;
 }
 .grid-box img {
   object-fit: cover !important;
