--- a/src/app/util/landing-pages-list-and-grid-view/landing-pages-list-and-grid-view.component.css
+++ b/src/app/util/landing-pages-list-and-grid-view/landing-pages-list-and-grid-view.component.css
@@ -270,7 +270,7 @@
   }
   
   .grid-box-height {
-    height: 580px !important;
+    height: 600px !important;
   }
   .flexContant{
     display: flex;
